--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,16 +1,11 @@
 {
-  "ignoreFiles": [
-    "dist/**",
-    "schematics/**"
-  ],
+  "ignoreFiles": ["dist/**", "schematics/**", "src/assets/fonts/**"],
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-recommended-scss",
+    "stylelint-config-recommended",
     "stylelint-config-rational-order"
   ],
-  "plugins": [
-    "stylelint-order"
-  ],
+  "plugins": ["stylelint-order"],
   "rules": {
     "alpha-value-notation": null,
     "at-rule-empty-line-before": null,
@@ -22,16 +17,11 @@
     "selector-pseudo-element-no-unknown": [
       true,
       {
-        "ignorePseudoElements": [
-          "ng-deep"
-        ]
+        "ignorePseudoElements": ["ng-deep"]
       }
     ],
     "selector-type-no-unknown": null,
     "string-quotes": "single",
-    "value-keyword-case": null,
-    "scss/at-extend-no-missing-placeholder": null,
-    "scss/comment-no-empty": null,
-    "scss/operator-no-unspaced": null
+    "value-keyword-case": null
   }
 }
