--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "npm run lint:ts && npm run lint:scss",
+    "lint": "npm run lint:ts && npm run lint:css",
     "lint:ts": "eslint \"src/**/*.ts\" --fix",
-    "lint:scss": "stylelint \"src/**/*.scss\" --fix",
+    "lint:css": "stylelint \"src/**/*.css\" --fix",
     "prepare": "husky install"
   },
   "private": true,
@@ -52,6 +52,12 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "lint-staged": "^13.0.3",
+    "stylelint": "^14.9.1",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
     "typescript": "~4.7.2"
   }
 }
