feat: adding my-page and authen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       "@core/*": ["app/core/*"],
       "@shared": ["app/shared"],
       "@shared/*": ["app/shared/*"],
+      "@theme": ["app/theme"],
+      "@theme/*": ["app/theme/*"],
+      "@routes": ["app/routes"],
+      "@routes/*": ["app/routes/*"],
+      "@services": ["app/services"],
+      "@services/*": ["app/services/*"],
       "@testing": ["testing"],
       "@testing/*": ["testing/*"],
       "@env": ["environments"],
