--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,6 +3,7 @@
   "extends": [
     "stylelint-config-standard",
     "stylelint-config-recommended",
+    "stylelint-config-recommended-scss",
     "stylelint-config-rational-order"
   ],
   "plugins": ["stylelint-order"],
@@ -22,6 +23,9 @@
     ],
     "selector-type-no-unknown": null,
     "string-quotes": "single",
-    "value-keyword-case": null
+    "value-keyword-case": null,
+    "scss/at-extend-no-missing-placeholder": null,
+    "scss/comment-no-empty": null,
+    "scss/operator-no-unspaced": null
   }
 }
