--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "npm run lint:ts && npm run lint:css",
+    "lint": "npm run lint:ts && npm run lint:css && npm run lint:scss",
     "lint:ts": "eslint \"src/**/*.ts\" --fix",
     "lint:css": "stylelint \"src/**/*.css\" --fix",
+    "lint:scss": "stylelint \"src/**/*.scss\" --fix",
     "prepare": "husky install"
   },
   "private": true,
@@ -18,18 +19,22 @@
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
     "@angular/localize": "^14.0.0",
     "@angular/material": "^14.0.4",
+    "@angular/material-moment-adapter": "^14.0.4",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-progressbar": "^9.0.0",
     "popper.js": "^1.16.1",
     "prettier": "^2.7.1",
     "rxjs": "~7.5.0",
+    "screenfull": "^6.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,6 +42,7 @@
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular-eslint/eslint-plugin": "^14.0.2",
     "@angular-eslint/eslint-plugin-template": "^14.0.2",
+    "@angular-eslint/template-parser": "^14.0.2",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
     "@commitlint/cli": "^17.0.3",
@@ -55,6 +61,7 @@
     "stylelint": "^14.9.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^8.0.0",
+    "stylelint-config-recommended-scss": "^7.0.0",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.3.0",
