--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ng-matero/extensions": "^14.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-permissions": "^13.0.1",
     "ngx-progressbar": "^9.0.0",
+    "ngx-toastr": "^15.0.0",
     "popper.js": "^1.16.1",
     "prettier": "^2.7.1",
     "rxjs": "~7.5.0",
