--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "ngx-permissions": "^13.0.1",
     "ngx-progressbar": "^9.0.0",
     "ngx-toastr": "^15.0.0",
@@ -53,6 +54,8 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.14",
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "eslint": "^8.19.0",
     "husky": "^8.0.1",
